--- a/music/rock.html
+++ b/music/rock.html
@@ -123,6 +123,7 @@
                         des Blue Brothers (1964)
                     </figcaption>
                 </figure>
+                <span class="button"><a href="#">Retour en haut de la page !</a></span>
             </article>
             <article id="progressif">
                 <h3>
@@ -165,9 +166,10 @@
                             allowfullscreen></iframe>
                     </div>
                     <figcaption>
-                        Deux titres, The Wall des Pink Floyd (1986) et The Ancient (Giants under the Sun) de Yes (1973)
+                        Deux titres : The Wall des Pink Floyd (1986) et The Ancient (Giants under the Sun) de Yes (1973)
                     </figcaption>
                 </figure>
+                <span class="button"><a href="#">Retour en haut de la page !</a></span>
             </article>
             <article id="hard">
                 <h3>
@@ -214,10 +216,10 @@
                             allowfullscreen></iframe>
                     </div>
                     <figcaption>
-                        Deux titres de hard rock : Back In Black de AC/DC (1980) et Stairway to Heaven de Led Zeppelin
-                        (1971)
+                        Back In Black de AC/DC (1980) et Stairway to Heaven de Led Zeppelin (1971)
                     </figcaption>
                 </figure>
+                <span class="button"><a href="#">Retour en haut de la page !</a></span>
             </article>
             <article id="punk">
                 <h3>
@@ -243,15 +245,15 @@
                     </li>
                 </ul>
                 <div class="spotify-integ">
-                        <div>
-                            <iframe src="https://open.spotify.com/embed/track/64yrDBpcdwEdNY9loyEGbX" frameborder="0"
-                                allowtransparency="true" allow="encrypted-media"></iframe>
-                        </div>
-                        <div>
-                            <iframe src="https://open.spotify.com/embed/track/6TfBA04WJ3X1d1wXhaCFVT" frameborder="0"
-                                allowtransparency="true" allow="encrypted-media"></iframe>
-                        </div>
+                    <div>
+                        <iframe src="https://open.spotify.com/embed/track/64yrDBpcdwEdNY9loyEGbX" frameborder="0"
+                            allowtransparency="true" allow="encrypted-media"></iframe>
                     </div>
+                    <div>
+                        <iframe src="https://open.spotify.com/embed/track/6TfBA04WJ3X1d1wXhaCFVT" frameborder="0"
+                            allowtransparency="true" allow="encrypted-media"></iframe>
+                    </div>
+                </div>
                 <figure class="double-yt">
                     <div>
                         <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/r00ikilDxW4"
@@ -262,98 +264,109 @@
                             allowfullscreen></iframe>
                     </div>
                     <figcaption>
-                        21 Guns de Green Day (2009) et You're Gonna Go Far Kid de The Offspring (2008)
+                        Deux titres de punk rock : 21 Guns de Green Day (2009) et You're Gonna Go Far Kid de The
+                        Offspring (2008)
                     </figcaption>
                 </figure>
+                <span class="button"><a href="#">Retour en haut de la page !</a></span>
             </article>
-            <article id="power">
+            <article id="grunge">
                 <h3>
-                    Power metal
+                    Le Grunge
                 </h3>
                 <p>
-                    Le Power metal est une version plus épique du Heavy metal. Il aborde une atmosphère plus positive
-                    que
-                    les autres styles "descendants". Il y a souvent un côté fantaisie que ce soit dans les paroles ou
-                    dans
-                    la mélodie.
-                    C'est également un des rares styles (avec le symphonic metal) qui intègrent parfois une symphonie,
-                    ce qui le rapproche parfois de la <a href="https://fr.wikipedia.org/wiki/Musique_classique"
-                        target="_blank">musique classique</a>.
-                    Le style met beaucoup l'accent sur les paroles qui sont mises au premier plan, et avec des musiques
-                    qui
-                    possèdent rarement du chant guttural.<br />
-                    3 groupes connus :
+                    Alors que le <a href="metal.html">metal</a> prend le relais du punk vers la fin des années 80, les
+                    années 90 marquent un retour à l’état pur du rock, entre autre par le biais du grunge. Mot d’argot
+                    désignant des détritus ou de la saleté, le grunge est souvent considéré comme le genre musical et
+                    l’esprit général d’une génération. La philosophie grunge est pessimiste, adaptée à un contexte
+                    économique sombre et un rejet global de la société de consommation, de l’individualisme, des règles
+                    : le grunge est l’enfant illégitime du punk.
                 </p>
-                <ul>
-                    <li>
-                        <a href="https://fr.wikipedia.org/wiki/Helloween" target="_blank">Helloween</a>
-                    </li>
-                    <li>
-                        <a href="https://fr.wikipedia.org/wiki/Powerwolf" target="_blank">Powerwolf</a>
-                    </li>
-                    <li>
-                        <a href="https://fr.wikipedia.org/wiki/DragonForce" target="_blank">DragonForce</a>
-                    </li>
-                </ul>
-                <figure class="double-yt">
+                <span class="source">Source : madmoizelle.com</span>
+                <p>
+                    Un titre connu de punk rock :
+                </p>
+                <div class="spotify-integ">
                     <div>
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/0jgrCKhxE1s"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/GpxFUo7oxWM"
+                        <iframe src="https://open.spotify.com/embed/track/1f3yAtsJtY87CTmM8RLnxf" frameborder="0"
+                            allowtransparency="true" allow="encrypted-media"></iframe>
+                    </div>
+                </div>
+                <figure class="simple-yt">
+                    <div>
+                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/hTWKbfoikeg"
                             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe>
                     </div>
                     <figcaption>
-                        Deux titres de power metal, Through The Fire And Flames de DragonForce (2005) et We Drink Your
-                        Blood
-                        de Powerwolf (2011)
+                        Smells Like Teen Spirit de <a href="https://fr.wikipedia.org/wiki/Nirvana_(groupe)">Nirvana</a>
+                        (1991)
                     </figcaption>
                 </figure>
+                <span class="button"><a href="#">Retour en haut de la page !</a></span>
             </article>
-            <article id="folk">
+            <article id="indep">
                 <h3>
-                    Folk metal
+                    Le rock indépendant
                 </h3>
                 <p>
-                    Le Folk metal est un genre de Heavy metal qui adopte des aspects plus traditionnels aux cultures. On
-                    y
-                    retrouve des variations telles que le metal celtique, oriental ou encore médiéval. On y retrouve la
-                    base
-                    instrumentale du metal (guitare, batterie et basse), mais aussi des instruments traditionnels comme
-                    le
-                    violon, la flûte, le <a href="https://fr.wikipedia.org/wiki/Tin_whistle" target="_blank">tin
-                        whistle</a>
-                    ou encore du <a href="https://fr.wikipedia.org/wiki/Kantele" target="_blank">kantele</a>. Dans
-                    l'ensemble, ce style
-                    est plus présent dans les pays nordiques. <br />
-                    3 groupes dans ce style :
+                    Aussi inspiré du mouvement punk dont il tire son esprit « do it yourself », le rock indépendant naît
+                    au Royaume-Uni dans les années 70. Comme son cousin le rock alternatif, le rock indépendant se
+                    définit plus par son contexte que sa musique : le terme désigne au départ les disques signés par des
+                    petits labels, rassemblés sous les mêmes valeurs d’indépendance et de contre-culture.
                 </p>
-                <ul>
-                    <li>
-                        <a href="https://fr.wikipedia.org/wiki/Eluveitie" target="_blank">Eluveitie</a>
-                    </li>
-                    <li>
-                        <a href="https://fr.wikipedia.org/wiki/Turisas" target="_blank">Turisas</a>
-                    </li>
-                    <li>
-                        <a href="https://fr.wikipedia.org/wiki/Korpiklaani" target="_blank">Korpiklaani</a>
-                    </li>
-                </ul>
+                <p>
+                    Adaptable à tout plein de genre musicaux, le terme d’« indépendant » est parfois utilisé pour
+                    désigner de façon générale les musiques indépendantes, produites par des petits labels. Tout comme
+                    le rock alternatif et le pop rock, le rock indépendant est varié au point de réunir sous son toit
+                    des artistes fichtrement différents : <a href="https://fr.wikipedia.org/wiki/The_Cranberries">les
+                        Cranberries</a>, <a href="https://fr.wikipedia.org/wiki/Red_Hot_Chili_Peppers">les Red Hot Chili
+                        Peppers</a>, <a href="https://fr.wikipedia.org/wiki/Fall_Out_Boy">Fall Out Boy</a> et <a
+                        href="https://fr.wikipedia.org/wiki/Panic!_at_the_Disco">Panic! at the disco</a>.
+                </p>
+                <p>
+                    3 titres populaires de rock indépendant :
+                </p>
+                <div class="spotify-integ">
+                    <div>
+                        <iframe src="https://open.spotify.com/embed/track/48UPSzbZjgc449aqz8bxox" frameborder="0"
+                            allowtransparency="true" allow="encrypted-media"></iframe>
+                    </div>
+                    <div>
+                        <iframe src="https://open.spotify.com/embed/track/7EZC6E7UjZe63f1jRmkWxt" frameborder="0"
+                            allowtransparency="true" allow="encrypted-media"></iframe>
+                    </div>
+                </div>
                 <figure class="double-yt">
                     <div>
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/iijKLHCQw5o"
+                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/YlUKcNNmywk"
                             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe>
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/ta-Z_psXODw"
+                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/6Ejga4kJUts"
                             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe>
                     </div>
                     <figcaption>
-                        Deux titres de folk metal, reprise Iris Mona de Eluveitie (2008) et Keelhauled de Alestorm
-                        (2009)
+                        Californication des Red Hot Chili Peppers (1999) et Zombie des Cranberries (1993)
                     </figcaption>
                 </figure>
+                <div class="spotify-integ">
+                    <div>
+                        <iframe src="https://open.spotify.com/embed/track/04aAxqtGp5pv12UXAg4pkq" frameborder="0"
+                            allowtransparency="true" allow="encrypted-media"></iframe>
+                    </div>
+                </div>
+                <figure class="simple-yt">
+                    <div>
+                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/LBr7kECsjcQ"
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+                    <figcaption>
+                        Centuries de Fall Out Boy (2015)
+                    </figcaption>
+                </figure>
+                <span class="button"><a href="#">Retour en haut de la page !</a></span>
             </article>
         </section>
     </main>
