--- a/music/rock.html
+++ b/music/rock.html
@@ -10,12 +10,12 @@
     <meta name="viewport" content="width=max-device-width, initial-scale=1" />
 </head>
 
-<body> class="rock-bg"
+<body class="rock-bg">
     <header>
         <div class="title">
             <a href="../index.html#" class="logo50"></a>
             <div class="subtitle">
-                Le Rock, du jazz au hard rock
+                Le Rock, du jazz a l'indépendant.
             </div>
         </div>
     </header>
@@ -30,13 +30,14 @@
                 Le rock'n'roll
             </h2>
             <p>
-                Le rock est un style dérivé du jazz, apparu dans les années 50. Apparu sous la forme du rock 'n' roll,
+                Le rock est un style dérivé du jazz, apparu dans les années 50. Apparu sous la forme du rock'n'roll,
                 il ressemble alors à un mélange de jazz, de blues, de country, mais aussi de bluegrass (style de music
                 américain) avec certaines influences folk ou européennes non négligeables. Depuis, le rock a évolué et
                 est devenu un style de musique très varié, majeur et omniprésent depuis le milieu du siècle précédent.
                 <a href="https://fr.wikipedia.org/wiki/Bill_Haley" target="_blank">Bill
                     Haley</a> est considéré comme le premier à populariser le genre.
             </p>
+            <span class="source">Source : Wikipédia</span>
             <figure class="simple-yt">
                 <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/ZgdufzXvjqw"
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -190,7 +191,7 @@
                     les principaux représentants du genre sont plutôt <a
                         href="https://fr.wikipedia.org/wiki/Led_Zeppelin">Led Zeppelin</a>, <a
                         href="https://fr.wikipedia.org/wiki/AC/DC">AC/DC</a>, <a
-                        href="https://fr.wikipedia.org/wiki/Guns_N%27_Roses"></a>Guns N’Roses</a>…
+                        href="https://fr.wikipedia.org/wiki/Guns_N%27_Roses">Guns N’Roses</a>…
                 </p>
                 <span class="source">Source : madmoizelle.com</span>
                 <p>
@@ -322,7 +323,7 @@
                     des artistes fichtrement différents : <a href="https://fr.wikipedia.org/wiki/The_Cranberries">les
                         Cranberries</a>, <a href="https://fr.wikipedia.org/wiki/Red_Hot_Chili_Peppers">les Red Hot Chili
                         Peppers</a>, <a href="https://fr.wikipedia.org/wiki/Fall_Out_Boy">Fall Out Boy</a> et <a
-                        href="https://fr.wikipedia.org/wiki/Panic!_at_the_Disco">Panic! at the disco</a>.
+                        href="https://fr.wikipedia.org/wiki/Panic!_at_the_Disco">Panic! at the disco</a> par exemple.
                 </p>
                 <p>
                     3 titres populaires de rock indépendant :
