--- a/music/metal.html
+++ b/music/metal.html
@@ -132,8 +132,7 @@
                 Thrash metal
             </h2>
             <p>
-                <!-- TODO #5 : Lier le Punk rock à sa page -->
-                Le Thrash metal est plutôt dérivé du <a href="">Punk rock</a>. Encore plus rapide/aggressive
+                Le Thrash metal est plutôt dérivé du <a href="rock.html#punk">Punk rock</a>. Encore plus rapide/aggressive
                 que le <a href="#heavy">Heavy metal</a>, il se développe dans les années 1980. Le Thrash aborde souvent
                 des sujets comme la politique, la mort, la drogue ou la violence en général. Les groupes tels que <a
                     href="https://fr.wikipedia.org/wiki/Iron_Maiden" target="_blank">Iron Maiden</a>, <a
