--- a/music/metal.html
+++ b/music/metal.html
@@ -126,6 +126,7 @@
                     Deux titres de heavy metal, Holy Diver de Dio (1983) et Run to the Hills de Iron Maiden (1982)
                 </figcaption>
             </figure>
+            <span class="button"><a href="#">Retour en haut de la page !</a></span>
         </section>
         <section id="thrash">
             <h2>
@@ -175,6 +176,7 @@
                     Deux titres de thrash metal, Master of Puppets de Metallica (1986) et Raining Blood de Slayer (1986)
                 </figcaption>
             </figure>
+            <span class="button"><a href="#">Retour en haut de la page !</a></span>
         </section>
         <section id="black">
             <h2>
@@ -222,6 +224,7 @@
                     Deux titres de black metal, Quintessence de Darkthorne (1995) et Freezing Moon de Mayhem (1994)
                 </figcaption>
             </figure>
+            <span class="button"><a href="#">Retour en haut de la page !</a></span>
         </section>
         <section id="death">
             <h2>
@@ -269,6 +272,7 @@
                     Deux titres de death metal, Spirit Crusher de Death (1998) et L'enfant Sauvage de Gojira (2012)
                 </figcaption>
             </figure>
+            <span class="button"><a href="#">Retour en haut de la page !</a></span>
         </section>
         <section id="power">
             <h2>
@@ -320,6 +324,7 @@
                     de Powerwolf (2011)
                 </figcaption>
             </figure>
+            <span class="button"><a href="#">Retour en haut de la page !</a></span>
         </section>
         <section id="folk">
             <h2>
@@ -370,6 +375,7 @@
                     (2009)
                 </figcaption>
             </figure>
+            <span class="button"><a href="#">Retour en haut de la page !</a></span>
         </section>
         <section id="doom">
             <h2>
@@ -420,6 +426,7 @@
                     Doom (2005)
                 </figcaption>
             </figure>
+            <span class="button"><a href="#">Retour en haut de la page !</a></span>
         </section>
         <section id="alternative">
             <h2>
@@ -468,6 +475,7 @@
                     Coming Undone de Korn (2005)
                 </figcaption>
             </figure>
+            <span class="button"><a href="#">Retour en haut de la page !</a></span>
         </section>
         <section id="groove">
             <h2>
@@ -520,6 +528,7 @@
                     God (2004)
                 </figcaption>
             </figure>
+            <span class="button"><a href="#">Retour en haut de la page !</a></span>
         </section>
     </main>
     <footer>
