added missing spotify integ

--- a/music/rock.html
+++ b/music/rock.html
@@ -38,7 +38,13 @@
                     Haley</a> est considéré comme le premier à populariser le genre.
             </p>
             <span class="source">Source : Wikipédia</span>
-            <figure class="simple-yt">
+            <div class="spotify-integ">
+                <div>
+                    <iframe src="https://open.spotify.com/embed/track/34AmZ4PMz9iNZVp9AMIGZj" frameborder="0"
+                        allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+            </div>
+<figure class="simple-yt">
                 <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/ZgdufzXvjqw"
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
