--- a/music/rap.html
+++ b/music/rap.html
@@ -47,10 +47,10 @@
             </p>
             <ul>
                 <li>
-                    <a href="rapfr"> Rap FR </a>
+                    <a href="#rapfr"> Rap FR </a>
                 </li>
                 <li>
-                    <a href="rapus">Rap US </a>
+                    <a href="#rapus">Rap US </a>
                 </li>
             </ul>
 
