added spotify integration

--- a/music/rap.html
+++ b/music/rap.html
@@ -34,6 +34,12 @@
                 il prend ses racines du hip-hop, ayant émergé au début des années 1970 dans les ghettos aux États-Unis. 
                 En 1979, "Rapper's Delight" de Sugarhill Gang devient le premier tube rap dans le monde et notamment en France où le mouvement hip-hop touche la jeunesse des cités.
             </p>
+            <div class="spotify-integ">
+                <div>
+                    <iframe src="https://open.spotify.com/embed/track/0tm6gsXe0LSm9zeSspyMQu" frameborder="0"
+                        allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+            </div>
             <figure class="simple-yt">
                 <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/ag_jeCgwVrw"
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -97,6 +103,12 @@
                         Leur single "au DD" a accumulé plus de 12 millions de vues en moins de 48h. Celui-ci compte aujourd'hui plus de 123 millions de vues.
                         Mi-août 2019, l'album "deux frères" devient triple disque de platine avec plus de 300 000 ventes. 
                         </p>
+                        <div class="spotify-integ">
+                            <div>
+                                <iframe src="https://open.spotify.com/embed/track/5lCxlSBFyP5g4EhVypAoOu"
+                                    frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                            </div>
+                        </div>
                         <figure class="simple-yt">
                                 <iframe class="yt-integration" 
                                 src="https://www.youtube-nocookie.com/embed/BtyHYIpykN0"
